# evo-c2rust-v2

./: .gitignore  README.md  pyproject.toml  report-cached-safe-ratio.json  report.json  report_0.json  report_1.json  report_2.json  report_3.json  shell.nix
.direnv/: nix-profile-.715596.95600680c021  nix-profile-.715596.95600680c021.rc  nix-profile-.718051.9b5ac7ad4529  nix-profile-.718051.9b5ac7ad4529.rc
c_metadata/c-algorithms/: files.json
c_metadata/rapidlz/: declarations_location.json
config/parse_replacements/: macro.json  replacement.json
experiments_scripts/: run_all_fill_compile.py  run_all_fill_test.py  run_all_increment_compile.py
experiments_scripts/cached/: calc_line_similarity.py  increment_fill_rate.py  safe_ratio.py  semantic_accuracy.py  syntax_accuracy.py
experiments_scripts/deepseek/: increment_fill_rate.py  safe_ratio.py  semantic_accuracy.py  syntax_accuracy.py
scripts/: code_generation.py  code_generation_none.py  code_generation_old.py  code_optimize_fix_delim.py  code_optimize_llm_repair.py  code_optimize_rule_based.py  code_verification.py  code_verification_old.py  delim_fix.py  extract_metadata.py  fill_compile.py  fill_test.py  gen_final_project.py  gen_project.py  generate.py  generate_hw.py  get_metadata.py  llm_repair.py  parse_c_project.py  rule_fix.py  run.py  translate_single.py  try.py  try_1.py  try_2.py  verify.py
scripts_new/: extract_metadata.py
shell_scripts/: all.sh  all_1.sh  count_safe_ratio.sh  fix_paren_mismatch.sh  generate.sh  llm_repair.sh  rule_based_optimize.sh  verify.sh
src/c_metadata/: extract.py  (+3 more)
(+6557 files in other folders)
